[package]
name = "pop_pak_ptool"
version = "0.1.0"
edition = "2021"

[dependencies]
logma = "0.1.9"
colored = "2.1.0"
clap = { version = "4.4.14", features = ["derive"] }
md5 = "0.7.0"
byteorder = { version = "1.5.0", features = [] }

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary
# bonus points: upx --best --ultra-brute -q output.exe